--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@microsoft/fetch-event-source",
+  "name": "@almars/fetch-event-source",
   "version": "2.0.3",
   "description": "A better API for making Event Source requests, with all the features of fetch()",
-  "homepage": "https://github.com/Azure/fetch-event-source#readme",
-  "repository": "github:Azure/fetch-event-source",
+  "homepage": "https://github.com/Almar/fetch-event-source#readme",
+  "repository": "github:Almar/fetch-event-source.git",
   "bugs": {
-    "url": "https://github.com/Azure/fetch-event-source/issues"
+    "url": "https://github.com/Almar/fetch-event-source/issues"
   },
-  "author": "Microsoft",
+  "author": "Almar Schouten",
   "license": "MIT",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -27,5 +27,10 @@
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
     "typescript": "^4.2.4"
-  }
+  },
+  "keywords": [
+    "EventSource",
+    "SSE",
+    "Fetch"
+  ]
 }
